// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JIRA wiki markup - Issue key (smart card) should not parse issue inside a bold 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "marks": Array [
            Object {
              "type": "strong",
            },
          ],
          "text": "this ABC-10 is an important smart card",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Issue key (smart card) should not parse issue inside double quotes 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "\\"ABC-10\\"",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Issue key (smart card) should not parse issue inside single quotes 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "'ABC-10'",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Issue key (smart card) should not parse issue key mixed in a text 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "YXZABC-10",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Issue key (smart card) should not parse issues if context is not provided 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "this ABC-10 is not a smart card",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Issue key (smart card) should not parse issues inside a code macro 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "this ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    Object {
      "attrs": Object {
        "language": "java",
        "uniqueId": null,
      },
      "content": Array [
        Object {
          "text": "ABC-10",
          "type": "text",
        },
      ],
      "type": "codeBlock",
    },
    Object {
      "content": Array [
        Object {
          "text": " is not a smart card",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Issue key (smart card) should not parse issues inside a color macro 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "this ",
          "type": "text",
        },
        Object {
          "marks": Array [
            Object {
              "attrs": Object {
                "color": "#ff0000",
              },
              "type": "textColor",
            },
          ],
          "text": "ABC-10",
          "type": "text",
        },
        Object {
          "text": " is not a smart card",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Issue key (smart card) should not parse issues inside a media 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "this is a media ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    Object {
      "attrs": Object {
        "layout": "center",
        "width": null,
      },
      "content": Array [
        Object {
          "attrs": Object {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "alt": "",
            "collection": "",
            "height": 183,
            "id": "abc-123",
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": 200,
          },
          "type": "media",
        },
      ],
      "type": "mediaSingle",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Issue key (smart card) should not parse issues inside a noformat macro 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "this ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    Object {
      "attrs": Object {
        "language": null,
        "uniqueId": null,
      },
      "content": Array [
        Object {
          "text": "ABC-10",
          "type": "text",
        },
      ],
      "type": "codeBlock",
    },
    Object {
      "content": Array [
        Object {
          "text": " is not a smart card",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Issue key (smart card) should not parse issues not present in the context 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "this issue wasn't provided in the context XYZ-99",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Issue key (smart card) should parse issue inside a h1 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "level": 1,
      },
      "content": Array [
        Object {
          "text": "smart card in the title ",
          "type": "text",
        },
        Object {
          "attrs": Object {
            "data": null,
            "url": "https://instance.atlassian.net/browse/ABC-10#icft=ABC-10",
          },
          "type": "inlineCard",
        },
      ],
      "type": "heading",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Issue key (smart card) should parse issue inside a h2 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "level": 2,
      },
      "content": Array [
        Object {
          "text": "smart card in the title ",
          "type": "text",
        },
        Object {
          "attrs": Object {
            "data": null,
            "url": "https://instance.atlassian.net/browse/ABC-10#icft=ABC-10",
          },
          "type": "inlineCard",
        },
      ],
      "type": "heading",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Issue key (smart card) should parse issue inside a h3 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "level": 3,
      },
      "content": Array [
        Object {
          "text": "smart card in the title ",
          "type": "text",
        },
        Object {
          "attrs": Object {
            "data": null,
            "url": "https://instance.atlassian.net/browse/ABC-10#icft=ABC-10",
          },
          "type": "inlineCard",
        },
      ],
      "type": "heading",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Issue key (smart card) should parse issue inside a h4 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "level": 4,
      },
      "content": Array [
        Object {
          "text": "smart card in the title ",
          "type": "text",
        },
        Object {
          "attrs": Object {
            "data": null,
            "url": "https://instance.atlassian.net/browse/ABC-10#icft=ABC-10",
          },
          "type": "inlineCard",
        },
      ],
      "type": "heading",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Issue key (smart card) should parse issue inside a h5 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "level": 5,
      },
      "content": Array [
        Object {
          "text": "smart card in the title ",
          "type": "text",
        },
        Object {
          "attrs": Object {
            "data": null,
            "url": "https://instance.atlassian.net/browse/ABC-10#icft=ABC-10",
          },
          "type": "inlineCard",
        },
      ],
      "type": "heading",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Issue key (smart card) should parse issue inside a h6 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "level": 6,
      },
      "content": Array [
        Object {
          "text": "smart card in the title ",
          "type": "text",
        },
        Object {
          "attrs": Object {
            "data": null,
            "url": "https://instance.atlassian.net/browse/ABC-10#icft=ABC-10",
          },
          "type": "inlineCard",
        },
      ],
      "type": "heading",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Issue key (smart card) should parse issue inside a list item 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "this ",
                  "type": "text",
                },
                Object {
                  "attrs": Object {
                    "data": null,
                    "url": "https://instance.atlassian.net/browse/ABC-10#icft=ABC-10",
                  },
                  "type": "inlineCard",
                },
                Object {
                  "text": " is a smart card",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Issue key (smart card) should parse issue inside a panel macro 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "this ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    Object {
      "attrs": Object {
        "panelType": "info",
      },
      "content": Array [
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "data": null,
                "url": "https://instance.atlassian.net/browse/ABC-10#icft=ABC-10",
              },
              "type": "inlineCard",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "panel",
    },
    Object {
      "content": Array [
        Object {
          "text": " is a smart card",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Issue key (smart card) should parse issue inside a paragraph 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "this ",
          "type": "text",
        },
        Object {
          "attrs": Object {
            "data": null,
            "url": "https://instance.atlassian.net/browse/ABC-10#icft=ABC-10",
          },
          "type": "inlineCard",
        },
        Object {
          "text": " is a smart card",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Issue key (smart card) should parse issue inside a quote macro 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "this ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "data": null,
                "url": "https://instance.atlassian.net/browse/ABC-10#icft=ABC-10",
              },
              "type": "inlineCard",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "blockquote",
    },
    Object {
      "content": Array [
        Object {
          "text": " is a smart card",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Issue key (smart card) should parse issue inside a table cell 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "__autoSize": false,
        "isNumberColumnEnabled": false,
        "layout": "default",
        "localId": "",
      },
      "content": Array [
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "content": Array [
                    Object {
                      "text": "foo",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "content": Array [
                    Object {
                      "attrs": Object {
                        "data": null,
                        "url": "https://instance.atlassian.net/browse/ABC-10#icft=ABC-10",
                      },
                      "type": "inlineCard",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
      ],
      "type": "table",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Issue key (smart card) should parse issue inside brackets 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "this ",
          "type": "text",
        },
        Object {
          "attrs": Object {
            "data": null,
            "url": "https://instance.atlassian.net/browse/ABC-10#icft=ABC-10",
          },
          "type": "inlineCard",
        },
        Object {
          "text": " is a smart card",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Issue key (smart card) should parse issues after an exclaimation mark 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "this !",
          "type": "text",
        },
        Object {
          "attrs": Object {
            "data": null,
            "url": "https://instance.atlassian.net/browse/ABC-10#icft=ABC-10",
          },
          "type": "inlineCard",
        },
        Object {
          "text": " is a smart card",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Issue key (smart card) should parse issues in between exclaimation mark 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "this !",
          "type": "text",
        },
        Object {
          "attrs": Object {
            "data": null,
            "url": "https://instance.atlassian.net/browse/ABC-10#icft=ABC-10",
          },
          "type": "inlineCard",
        },
        Object {
          "text": " !",
          "type": "text",
        },
        Object {
          "attrs": Object {
            "data": null,
            "url": "https://instance.atlassian.net/browse/ABC-20#icft=ABC-20",
          },
          "type": "inlineCard",
        },
        Object {
          "text": " are smart cards",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Issue key (smart card) should parse issues inside exclaimation mark 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "this !",
          "type": "text",
        },
        Object {
          "attrs": Object {
            "data": null,
            "url": "https://instance.atlassian.net/browse/ABC-10#icft=ABC-10",
          },
          "type": "inlineCard",
        },
        Object {
          "text": " ! is a smart card",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Issue key (smart card) should parse issues inside parentheses 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "this (",
          "type": "text",
        },
        Object {
          "attrs": Object {
            "data": null,
            "url": "https://instance.atlassian.net/browse/ABC-10#icft=ABC-10",
          },
          "type": "inlineCard",
        },
        Object {
          "text": ") is a smart card",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Issue key (smart card) should parse more than one issue inside a paragraph 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "attrs": Object {
            "data": null,
            "url": "https://instance.atlassian.net/browse/ABC-10#icft=ABC-10",
          },
          "type": "inlineCard",
        },
        Object {
          "text": " and ",
          "type": "text",
        },
        Object {
          "attrs": Object {
            "data": null,
            "url": "https://instance.atlassian.net/browse/ABC-20#icft=ABC-20",
          },
          "type": "inlineCard",
        },
        Object {
          "text": " are smart cards",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;
